--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
+        maven { url "http://repository.jetbrains.com/all" }
     }
 }
 
